# File-Mover

./: .gitignore  CMakeLists.txt  DirTaskBar.qml  README.md  SideMenuButtons.qml  TabBar.qml  file_mover_wrapper.h  main.cpp  resources.qrc  rules_model.h  tray_icon.cpp
File-Mover/: CMakeLists.txt  DirList.qml  DirManager.qml  DirManagerList.qml  DirManagerTaskBar.qml  FileManager.qml  Main.qml  RuleList.qml  file_mover_wrapper.cpp  file_mover_wrapper.h  main.cpp  rules_model.h  tray_icon.cpp
app/: main.cpp  resources.qrc
app/qml/: DirList.qml  FileManager.qml  Main.qml  RuleList.qml  RuleTaskBar.qml  SideMenuButtons.qml
core/: file_mover.hpp  file_mover_wrapper.h  rules_model.cpp  rules_model.h  tray_icon.cpp  tray_icon.h
core/details/: dir.cpp  visitors.cpp  visitors.hpp
src/: file_mover.cpp  file_mover.hpp
src/details/: dir.cpp  dir.hpp  rules.hpp  visitors.cpp  visitors.hpp
